# study_time_esp32

./: CMakeLists.txt
include/: ClassScansionBLTE.hpp  EspLcdGFX.hpp  Eyes.hpp  library.hpp
main/: CMakeLists.txt  ClassScansionBLTE.cpp  main.cpp
srcs/: ClassScansionBLTE.cpp  logicCore.cpp  main.cpp
